# rust_3ex

./: README.md
mcp_11/: Cargo.toml  README.md  scheme.sql
mcp_11/src/: main.rs  mod_test.rs
mcp_12/: Cargo.toml  README.md
mcp_12/src/: main.rs
mcp_13/: Cargo.toml  README.md
mcp_13/src/: main.rs
mcp_14/: Cargo.toml  README.md
mcp_14/src/: main.rs  mod_rag.rs  mod_test.rs
mcp_16/: README.md  table.sql
mcp_16/src/: main.rs
mcp_17/: Cargo.toml  README.md
mcp_17/src/: main.rs
mcp_19/: .env.example  Cargo.toml  README.md  table.sql
mcp_19/src/: main.rs  mod_search.rs
mcp_2/: Cargo.toml  README.md
mcp_2/src/: main.rs
mcp_21/: Cargo.toml  README.md
mcp_21/src/: main.rs  mod_rag.rs
mcp_23/: Cargo.toml  README.md  table.sql
mcp_23/src/: main.rs  mod_search.rs
mcp_27/: Cargo.toml  README.md
mcp_27/src/: main.rs  mod_search.rs
mcp_29/: README.md
mcp_3/: Cargo.toml  README.md  scheme.sql
mcp_3/src/: main.rs  mod_diary.rs  mod_purchase.rs
mcp_4/: Cargo.toml  README.md  test_create.js
mcp_4/src/: main.rs  mod_purchase.rs
mcp_5/: Cargo.toml  README.md
mcp_5/src/: main.rs
mcp_6/: Cargo.toml  README.md  input.xlsx
mcp_6/src/: mod_purchase.rs
mcp_7/: Cargo.toml  README.md  scheme.sql  test_list_xls.js
mcp_7/src/: main.rs  mod_purchase.rs
mcp_9/: Cargo.toml  README.md  scheme.sql  test_create.js
mcp_9/src/: main.rs  mod_data.rs  mod_purchase.rs
obsidian-tool/: .env.example  Cargo.toml  README.md
obsidian-tool/src/: main.rs
qdrant_3/: Cargo.toml  README.md
qdrant_3/src/: main.rs  mod_config.rs
qdrant_6/: Cargo.toml  README.md
qdrant_6/src/: main.rs  mod_config.rs  mod_search.rs
sqlite4/: Cargo.toml
sqlite4/src/: main.rs
