[package]
name = "mcp_23"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4"
dotenvy = "0.15"
pgvector = { version = "0.3", features = ["sqlx"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono","uuid"] }
unicode-segmentation = "1.10"
uuid = { version = "1", features = ["v4"] }
