[package]
name = "mcp_27"
version = "0.1.0"
edition = "2021"

#pgvector = { version = "0.3", features = ["sqlx"] }
#tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
#sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono","uuid"] }
[dependencies]
anyhow = "1.0.100"
chrono = "0.4"
dotenvy = "0.15"
qdrant-client = "1.16.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tonic = "0.14.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-segmentation = "1.10"
uuid = { version = "1", features = ["v4"] }


