[package]
name = "rust_mcp_server_6"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libsql = "0.9.23"
tokio = { version = "1", features = ["full"] }
umya-spreadsheet = "2.3.3"
